force-app/main/default/objects/HAM_Event_Form_Submission__c/HAM_Event_Form_Submission__c.object-meta.xml
<CustomObject>
    <description>Stores form submission records representing an attendee&apos;s completion of a registration or event form. Each record links an attendee to a specific form for a Cvent event.</description>
    <label>HAM Event Form Submission</label>
    <nameField>
        <displayFormat>FS-{00000000}</displayFormat>
        <label>Form Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM Event Form Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>