force-app/main/default/objects/HAM_Event_Form_Submission__c/fields/CventEvents_Event__c.field-meta.xml
<CustomField>
    <fullName>CventEvents_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Cvent event this form submission is associated with.</description>
    <inlineHelpText>The Cvent event for which this form was submitted.</inlineHelpText>
    <label>Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>HAM Event Form Submissions</relationshipLabel>
    <relationshipName>HAM_Event_Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>