force-app/main/default/objects/HAM_Event_Form_Submission__c/fields/HAM_Attendee__c.field-meta.xml
<CustomField>
    <fullName>HAM_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Cvent attendee who submitted this form.</description>
    <inlineHelpText>The attendee who completed and submitted this form.</inlineHelpText>
    <label>Attendee</label>
    <referenceTo>CventEvents__Attendee__c</referenceTo>
    <relationshipLabel>HAM Event Form Submissions</relationshipLabel>
    <relationshipName>HAM_Event_Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>