force-app/main/default/objects/HAM_Event_Form_Submission__c/fields/HAM_BT_Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Form_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Traceability lookup to the original Blackthorn form submission this record was migrated from. Will be empty once Blackthorn is decommissioned.</description>
    <inlineHelpText>The original Blackthorn form submission this record was migrated from. Used for migration QC and validation only.</inlineHelpText>
    <label>BT Form Submission</label>
    <referenceTo>conference360__Form_Submission__c</referenceTo>
    <relationshipLabel>HAM Event Form Submissions</relationshipLabel>
    <relationshipName>HAM_Event_Form_Submissions_BT</relationshipName>
    <type>Lookup</type>
</CustomField>