force-app/main/default/objects/HAM_Event_Form_Submission__c/fields/HAM_Event_Form__c.field-meta.xml
<CustomField>
    <fullName>HAM_Event_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the HAM event form that was submitted by the attendee.</description>
    <inlineHelpText>The form definition this submission is a response to.</inlineHelpText>
    <label>Event Form</label>
    <referenceTo>HAM_Event_Form__c</referenceTo>
    <relationshipLabel>HAM Event Form Submissions</relationshipLabel>
    <relationshipName>HAM_Event_Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>